[package]
name = "color-ssh"
description = "A Rust-based SSH client with syntax highlighting."
version = "0.4.2"
edition = "2021"
authors = ["Karsyboy"]
documentation = "https://github.com/karsyboy/color-ssh"
readme = "README.md"
homepage = "https://github.com/karsyboy/color-ssh"
repository = "https://github.com/karsyboy/color-ssh"
license = "MIT"
keywords = ["ssh", "client", "syntax", "highlighting"]
categories = ["command-line-interface", "command-line-utilities", "network-programming"]

[[bin]]
name = "csh"
path = "src/main.rs"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
dirs = "6.0.0"
notify = "8.0.0"
once_cell = "1.20.3"
regex = "1.11.1"
serde = {version ="1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

